[package]
name = "daemonizr"
version = "0.1.0"
authors = ["Alex Ellwein <alex.ellwein@gmail.com>"]
edition = "2018"
description = "Small crate which helps with writing daemon applications in Rust"
repository = "https://github.com/aellwein/daemonizr"
readme = "README.md"
license-file = "LICENSE"
keywords = ["daemon", "daemonize", "unix"]
categories = ["os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"