[package]
name = "daemonizr"
version = "0.1.7"
authors = ["Alex Ellwein <alex.ellwein@gmail.com>"]
edition = "2024"
description = "Small crate which helps with writing daemon applications in Rust"
repository = "https://github.com/aellwein/daemonizr"
readme = "README.md"
license = "MIT"
keywords = ["daemon", "daemonize", "unix"]
categories = ["os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.31.0", features = ["fs", "process", "user"]}
